--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-
+    
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     def room = "2.4.3"
     implementation "androidx.room:room-runtime:$room"
