--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     def retrofit = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit"
     /* =======================================okhttp============================================= */
     def okhttp = "5.0.0-alpha.11"
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
@@ -65,6 +66,7 @@ dependencies {
     def room = "2.5.1"
     implementation "androidx.room:room-runtime:$room"
     implementation "androidx.room:room-ktx:$room"
+    implementation "androidx.room:room-rxjava3:$room"
     kapt "androidx.room:room-compiler:$room"
     /* =======================================MVVM=============================================== */
     def lifecycle = "2.6.1"
@@ -77,6 +79,10 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger"
     implementation "com.google.dagger:dagger-android-support:$dagger"
     kapt "com.google.dagger:dagger-android-processor:$dagger"
+    /* =======================================RxJava============================================= */
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     /* =======================================Utils============================================== */
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
